Revision history for Net-Statsd-Tiny

{{$NEXT}}

v0.3.7    2023-12-12 15:22:36+00:00 Europe/London
  [Documentation]
  - Update copyright year.

  - Fix typo in SYNOPSIS for the set_add method.

  - Fix encoding of links in README.

  [Tests]
  - Switched package used for the release manifest.

  [Other]
  - Signed the release.

v0.3.6    2020-07-31 14:47:58+01:00 Europe/London
  [Documentation]
  - Update copyright year.

  [Toolchain]
  - Add core modules in the prerequisites.

v0.3.5    2019-12-21 10:21:06+00:00 Europe/London
  [Documentation]
  - Fixed typo, thanks @mrdvt92.

  [Tests]
  - Bumped minimum version prerequisite for Test::TCP.

  [Other]
  - Added keywords to module metadata.

v0.3.4    2019-07-21 11:31:26+01:00 Europe/London
  [Documentation]
  - Fixed copyright year.

v0.3.3    2019-07-20 10:55:49+01:00 Europe/London
  [Documentation]
  - Amended note in SEE ALSO about Net-Statsd-Lite.

  - Added INSTALL file to the distribution.

v0.3.2    2018-09-13 18:24:59+01:00 Europe/London
  [Incompatable Changes]
  - Removed deprecated add_set method.

  [Other Changes]
  - Removed stub Net::Statsd::Tiny::Types module.

  [Tests]
  - Updated tests to be more Windows-friendly (backported from
    Net-Statsd-Lite).

v0.3.1    2018-05-02 20:58:00+01:00 Europe/London
  [Documentation]
  - Rewrote the section about data validation.

  [Toolchain]
  - Removed core and redundant prereqs.

v0.3.0    2018-02-07 23:35:15+00:00 Europe/London
  [Enhancements]
  - Remove the use of most prereqs, so that this module is "Tiny", #2.

  - Backported improvements from Net::Statsd::Lite v0.4.0.

  [Bug Fixes]
  - Sample rates are honoured properly.

v0.2.1    2018-02-06 09:25:32+00:00 Europe/London
  [Tests]
  - Specified a minimum Test::TCP version.

v0.2.0    2018-02-05 17:38:42+00:00 Europe/London
  [Enhancements]
  - Added rate option for logging timings.

v0.1.1    2018-02-05 15:28:33+00:00 Europe/London
  [Bug Fixes]