@@ -1,6 +1,8 @@
 Revision history for Net-Statsd-Tiny
 
 {{$NEXT}}
+  [Documentation]
+  - Add a security policy.
 
 v0.3.7    2023-12-12 15:22:36+00:00 Europe/London
   [Documentation]
